--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,3 +15,10 @@ updates:
           timezone: Europe/Copenhagen
           time: "12:00"
       labels: []
+    - directory: /
+      package-ecosystem: npm
+      schedule:
+          interval: daily
+          timezone: Europe/Copenhagen
+          time: "12:00"
+      labels: []
