--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -12,7 +12,7 @@
         <AnalysisLevel>latest-all</AnalysisLevel>
         <ArtifactsPath>$(MSBuildThisFileDirectory)out</ArtifactsPath>
         <ArtifactsPublishOutputName>pub</ArtifactsPublishOutputName>
-        <ArtifactsPackageOutputName>pkg</ArtifactsPackageOutputName>
+        <ArtifactsPackageOutputName>pkg/dotnet</ArtifactsPackageOutputName>
         <EnablePackageValidation>true</EnablePackageValidation>
         <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
         <ImplicitUsings>true</ImplicitUsings>
