--- a/nuget.config
+++ b/nuget.config
@@ -10,7 +10,7 @@
     <packageSources>
         <clear />
         <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-        <add key="celerity" value="out/pkg/debug" />
+        <add key="celerity" value="out/pkg/dotnet/debug" />
     </packageSources>
 
     <packageSourceMapping>
