--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cpy-cli": "4.2.0",
     "esbuild": "0.17.16",
     "eslint": "^8.38.0",
-    "markdownlint-cli2": "^0.6.0",
+    "mkdirp": "3.0.0",
     "nerdbank-gitversioning": "3.6.79-alpha",
     "rimraf": "5.0.0",
     "symlink-dir": "5.1.1",
