--- a/src/extensions/vscode/package.json
+++ b/src/extensions/vscode/package.json
@@ -141,15 +141,19 @@
     "@types/node": "16.11.68",
     "@types/vscode": "1.77.0",
     "@vscode/vsce": "2.19.0",
-    "generator-code": "1.7.5"
+    "generator-code": "1.7.5",
+    "ovsx": "0.8.0"
   },
   "dependencies": {
     "vscode-languageclient": "8.1.0"
   },
   "scripts": {
-    "build": "tsc --noEmit && eslint src --ext ts && rimraf ../../../out/bin/src/extensions/vscode && esbuild src/extension.ts --external:vscode --platform=node --bundle --minify --sourcemap --outdir=../../../out/bin/src/extensions/vscode && cpy README.md language-configuration.json package.json snippets syntaxes ../../../out/bin/src/extensions/vscode && symlink-dir node_modules ../../../out/bin/src/extensions/vscode/node_modules && cd ../../../out/bin/src/extensions/vscode && cpy ../../../../../LICENSE-0BSD . --flat --rename=LICENSE && cpy \"../../../../../celerity.{png,svg}\" . --flat && echo node_modules > .vscodeignore && nbgv-setversion",
-    "clean": "rimraf ../../../out/bin/src/extensions/vscode",
-    "pack": "cd ../../../out/bin/src/extensions/vscode && vsce package --pre-release -o ../../../../pkg"
+    "build": "tsc --noEmit && eslint src --ext ts && rimraf ../../../out/bin/src/extensions/vscode && esbuild src/extension.ts --external:vscode --platform=node --bundle --minify --sourcemap --outdir=../../../out/bin/src/extensions/vscode && cpy README.md language-configuration.json package.json snippets syntaxes ../../../out/bin/src/extensions/vscode && symlink-dir node_modules ../../../out/bin/src/extensions/vscode/node_modules && cd ../../../out/bin/src/extensions/vscode && cpy ../../../../../LICENSE-0BSD . --flat --rename=LICENSE && cpy \"../../../../../celerity.{png,svg}\" . --flat && nbgv-setversion",
+    "pack": "cd ../../../out/bin/src/extensions/vscode && mkdirp ../../../../pkg/vscode && vsce package -o ../../../../pkg/vscode"
+  },
+  "vsce": {
+    "dependencies": false,
+    "prerelease": true
   },
   "main": "extension.js"
 }
