--- a/src/extensions/vscode/.npmrc
+++ b/src/extensions/vscode/.npmrc
@@ -1,4 +1,6 @@
 audit = false
 engine-strict = true
 fund = false
+logs-dir = ../../../out/log/node/vscode
+logs-max = 9007199254740991
 save-exact = true
