--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,3 +40,15 @@ jobs:
             - name: Run Cake
               run: |
                   ./cake -c ${{ matrix.cfg }}
+            - name: Upload artifacts
+              if: always()
+              uses: actions/upload-artifact@v3.1.2
+              with:
+                  name: ${{ github.workflow }}-${{ github.run_number }}-${{ github.run_attempt }}-${{ matrix.os }}-${{ matrix.cfg }}
+                  path: |
+                      out/bin/*
+                      out/bld/*
+                      out/log/*
+                      out/pkg/*
+                      out/pub/*
+                      out/trx/*
