--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -30,6 +30,18 @@ jobs:
             - name: Run Cake
               run: |
                   ./cake upload-dotnet-github
+            - name: Upload artifacts
+              if: always()
+              uses: actions/upload-artifact@v3.1.2
+              with:
+                  name: ${{ github.workflow }}-${{ github.run_number }}-${{ github.run_attempt }}-windows-2022-Debug
+                  path: |
+                      out/bin/*
+                      out/bld/*
+                      out/log/*
+                      out/pkg/*
+                      out/pub/*
+                      out/trx/*
             - name: Prune GitHub packages
               uses: SmartsquareGmbH/delete-old-packages@v0.6.0
               with:
