--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,3 +29,15 @@ jobs:
             - name: Run Cake
               run: |
                   ./cake upload-dotnet-nuget -c Release
+            - name: Upload artifacts
+              if: always()
+              uses: actions/upload-artifact@v3.1.2
+              with:
+                  name: ${{ github.workflow }}-${{ github.run_number }}-${{ github.run_attempt }}-windows-2022-Release
+                  path: |
+                      out/bin/*
+                      out/bld/*
+                      out/log/*
+                      out/pkg/*
+                      out/pub/*
+                      out/trx/*
