--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -43,8 +43,10 @@ jobs:
                       out/pub/*
                       out/trx/*
             - name: Prune GitHub packages
-              uses: SmartsquareGmbH/delete-old-packages@v0.6.0
+              uses: SmartsquareGmbH/delete-old-packages@v0.7.0
               with:
+                  organization: ${{ github.repository_owner }}
+                  type: nuget
                   names: |
                       celerity
                       Vezel.Celerity.Common
