--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,9 +46,9 @@ jobs:
               with:
                   name: ${{ github.workflow }}-${{ github.run_number }}-${{ github.run_attempt }}-${{ matrix.os }}-${{ matrix.cfg }}
                   path: |
-                      out/bin/*
-                      out/bld/*
-                      out/log/*
-                      out/pkg/*
-                      out/pub/*
-                      out/trx/*
+                      out/bin
+                      out/bld
+                      out/log
+                      out/pkg
+                      out/pub
+                      out/trx
