Disable exactOptionalPropertyTypes in tsconfig.json.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
     "checkJs": true,
-    "exactOptionalPropertyTypes": true,
+    "exactOptionalPropertyTypes": false, // TODO: https://github.com/microsoft/vscode-languageserver-node/issues/1231
     "isolatedModules": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
