Add celerity.enableLanguageServer setting to the VS Code extension.

--- a/src/extensions/vscode/package.json
+++ b/src/extensions/vscode/package.json
@@ -80,6 +80,13 @@
       {
         "title": "Celerity",
         "properties": {
+          "celerity.enableLanguageServer": {
+            "title": "Enable Language Server",
+            "scope": "machine",
+            "type": "boolean",
+            "default": true,
+            "markdownDescription": "Enable language server support."
+          },
           "celerity.executablePath": {
             "title": "Executable Path",
             "scope": "machine",
