--- a/src/extensions/vscode/package.json
+++ b/src/extensions/vscode/package.json
@@ -93,7 +93,7 @@
         "title": "Restart Language Server"
       }
     ],
-    "configuration":[
+    "configuration": [
       {
         "title": "Celerity",
         "properties": {
@@ -218,9 +218,21 @@
   "devDependencies": {
     "@types/node": "16.11.68",
     "@types/vscode": "1.77.0",
+    "@typescript-eslint/eslint-plugin": "5.59.0",
+    "@typescript-eslint/parser": "5.59.0",
     "@vscode/vsce": "2.19.0",
+    "cpy-cli": "4.2.0",
+    "esbuild": "0.17.17",
+    "eslint": "8.38.0",
     "generator-code": "1.7.5",
-    "ovsx": "0.8.0"
+    "js-yaml": "4.1.0",
+    "mkdirp": "3.0.0",
+    "nerdbank-gitversioning": "3.6.79-alpha",
+    "ovsx": "0.8.0",
+    "rimraf": "5.0.0",
+    "symlink-dir": "5.1.1",
+    "typescript": "5.0.4",
+    "yo": "4.3.1"
   },
   "dependencies": {
     "vscode-languageclient": "8.1.0"
