Rename Cake tasks to be less unwieldy.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,9 +28,9 @@ jobs:
                   node-version-file: package.json
             - name: Run Cake
               run: |
-                  ./cake upload-dotnet-nuget -c Release
-                  ./cake upload-node-vscode-vsce -c Release
-                  ./cake upload-node-vscode-ovsx -c Release
+                  ./cake upload-core-nuget -c Release
+                  ./cake upload-vscode-vsce -c Release
+                  ./cake upload-vscode-ovsx -c Release
             - name: Upload artifacts
               if: always()
               uses: actions/upload-artifact@v3.1.2
