--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -29,7 +29,7 @@ jobs:
                   node-version-file: package.json
             - name: Run Cake
               run: |
-                  ./cake upload-dotnet-github
+                  ./cake upload-core-github
             - name: Upload artifacts
               if: always()
               uses: actions/upload-artifact@v3.1.2
