--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -24,9 +24,10 @@ jobs:
                   submodules: recursive
             - name: Set up .NET
               uses: actions/setup-dotnet@v3.0.3
-            - uses: actions/setup-node@v3.6.0
+            - name: Set up Node.js
+              uses: actions/setup-node@v3.6.0
               with:
-                  node-version-file: package.json
+                  node-version-file: src/extensions/vscode/package.json
             - name: Run Cake
               run: |
                   ./cake upload-core-github
