Properly fix _AddNativeLibraries.
Take 2 on 4193fb15674cb98434df2a54b3db9f31448b25ee.

It needs to depend on AssignTargetPaths for the libraries to be picked up both
for publishing and packing.

Remove the dependency on ResolveAssemblyReferences as this caused the weird
build errors. This dependency was not necessary anyway.

--- a/src/runtime/core/core.csproj
+++ b/src/runtime/core/core.csproj
@@ -22,8 +22,7 @@ bytecode lowerer, garbage collector, and agent scheduler.</PackageDescription>
     </ItemGroup>
 
     <Target Name="_AddNativeLibraries"
-            DependsOnTargets="ResolveAssemblyReferences"
-            BeforeTargets="AssignTargetPaths">
+            BeforeTargets="AssignTargetPaths; _GetPackageFiles">
         <MSBuild Projects="../native/native.cproj"
                  Targets="_GetNativeLibraries">
             <Output TaskParameter="TargetOutputs"
@@ -32,8 +31,8 @@ bytecode lowerer, garbage collector, and agent scheduler.</PackageDescription>
 
         <ItemGroup>
             <Content Include="@(_NativeLibrary)"
-                     CopyToOutputDirectory="Always"
                      Link="%(RuntimeIdentifier)/%(Filename)%(Extension)"
+                     CopyToOutputDirectory="Always"
                      PackagePath="runtimes/%(RuntimeIdentifier)/native" />
         </ItemGroup>
     </Target>
