Rename VS Code snippets file to celerity.snippets.json.
Otherwise the extension treats it as a Celerity project file.

--- a/src/extensions/vscode/package.json
+++ b/src/extensions/vscode/package.json
@@ -206,7 +206,7 @@
     "snippets": [
       {
         "language": "celerity",
-        "path": "snippets/celerity.json"
+        "path": "snippets/celerity.snippets.json"
       }
     ],
     "taskDefinitions": [
