--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,5 +48,5 @@ jobs:
                   name: ${{ github.workflow }}-${{ github.run_number }}-${{ github.run_attempt }}-${{ matrix.os }}-${{ matrix.cfg }}
                   path: |
                       out
-                      !out/dep
-                      !out/obj
+                      !out/dep/**/*
+                      !out/obj/**/*
