--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -37,6 +37,6 @@ jobs:
               with:
                   name: ${{ github.workflow }}-${{ github.run_number }}-${{ github.run_attempt }}-windows-2022-Debug
                   path: |
-                      out
+                      out/**/*
                       !out/dep/**/*
                       !out/obj/**/*
