Revert "Attempt 3 to reduce the excessive number of artifacts being uploaded in CI."
This reverts commit ed1f4ddfc6eee24c62db5d1cd34886cb9918fda6.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,6 @@ jobs:
               with:
                   name: ${{ github.workflow }}-${{ github.run_number }}-${{ github.run_attempt }}-windows-2022-Release
                   path: |
-                      out/**/*
+                      out
                       !out/dep/**/*
                       !out/obj/**/*
