Revert "Attempt 2 to reduce the excessive number of artifacts being uploaded in CI."
This reverts commit 3797e64c6458f03ed57d7e16a62d2dc7d6fab4f7.

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -38,5 +38,5 @@ jobs:
                   name: ${{ github.workflow }}-${{ github.run_number }}-${{ github.run_attempt }}-windows-2022-Debug
                   path: |
                       out
-                      !out/dep/**/*
-                      !out/obj/**/*
+                      !out/dep
+                      !out/obj
