--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,5 +39,5 @@ jobs:
                   name: ${{ github.workflow }}-${{ github.run_number }}-${{ github.run_attempt }}-windows-2022-Release
                   path: |
                       out
-                      !out/dep/**/*
-                      !out/obj/**/*
+                      !out/dep
+                      !out/obj
