Revert "Attempt to reduce the excessive number of artifacts being uploaded in CI."
This reverts commit f600e1af343a0969ee90a5f6a2aad2cdae49dca5.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,9 @@ jobs:
               with:
                   name: ${{ github.workflow }}-${{ github.run_number }}-${{ github.run_attempt }}-windows-2022-Release
                   path: |
-                      out
-                      !out/dep
-                      !out/obj
+                      out/bin
+                      out/bld
+                      out/log
+                      out/pkg
+                      out/pub
+                      out/trx
