Update NBGV to 3.6.128.

--- a/src/extensions/vscode/package.json
+++ b/src/extensions/vscode/package.json
@@ -227,7 +227,7 @@
     "generator-code": "1.7.5",
     "js-yaml": "4.1.0",
     "mkdirp": "3.0.0",
-    "nerdbank-gitversioning": "3.6.79-alpha",
+    "nerdbank-gitversioning": "3.6.128",
     "ovsx": "0.8.0",
     "rimraf": "5.0.0",
     "symlink-dir": "5.1.1",
