--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -1,4 +1,8 @@
 <Project>
+    <PropertyGroup Condition="'$(UsingVezelZigSdk)' != 'true'">
+        <NBGV_ThisAssemblyNamespace>$(RootNamespace)</NBGV_ThisAssemblyNamespace>
+    </PropertyGroup>
+
     <PropertyGroup Condition="'$(IsTestProject)' == 'true'">
         <VSTestLogger>trx</VSTestLogger>
         <VSTestResultsDirectory>$(ArtifactsPath)/trx/$(ArtifactsProjectName)/$(ArtifactsPivots)</VSTestResultsDirectory>
