Set EnforceExtendedAnalyzerRules=true in the generators project.

--- a/src/generators/generators.csproj
+++ b/src/generators/generators.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <AssemblyName>Vezel.Celerity.Generators</AssemblyName>
+        <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
         <RootNamespace>Vezel.Celerity.Generators</RootNamespace>
         <TargetFramework>netstandard2.0</TargetFramework>
     </PropertyGroup>
