Set SelfContained the trimming project to ensure the runtime pack is restored.

--- a/src/trimming/trimming.csproj
+++ b/src/trimming/trimming.csproj
@@ -10,6 +10,7 @@
         <OutputType>Exe</OutputType>
         <PublishTrimmed>true</PublishTrimmed>
         <RootNamespace>Vezel.Celerity.Trimming</RootNamespace>
+        <SelfContained>true</SelfContained>
         <UseCurrentRuntimeIdentifier>true</UseCurrentRuntimeIdentifier>
     </PropertyGroup>
 
