--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -44,15 +44,9 @@
         <When Condition="'$(IsPackable)' == 'true'">
             <PropertyGroup>
                 <ApplicationIcon Condition="'$(OutputType)' != 'Library'">$(MSBuildThisFileDirectory)celerity.ico</ApplicationIcon>
+                <IsAotCompatible Condition="'$(OutputType)' == 'Library'">true</IsAotCompatible>
                 <PackageIcon>celerity.png</PackageIcon>
                 <PackageReadmeFile>PACKAGE.md</PackageReadmeFile>
-            </PropertyGroup>
-
-            <PropertyGroup Condition="'$(OutputType)' == 'Library'">
-                <EnableAotAnalyzer>true</EnableAotAnalyzer>
-                <EnableSingleFileAnalyzer>true</EnableSingleFileAnalyzer>
-                <EnableTrimAnalyzer>true</EnableTrimAnalyzer>
-                <IsTrimmable>true</IsTrimmable>
             </PropertyGroup>
 
             <ItemGroup>
