Set SatelliteResourceLanguages=en in the driver.

--- a/src/driver/driver.csproj
+++ b/src/driver/driver.csproj
@@ -12,6 +12,7 @@ This package provides the .NET global tool.</PackageDescription>
         <PackageId>celerity</PackageId>
         <RollForward>LatestMajor</RollForward>
         <RootNamespace>Vezel.Celerity.Driver</RootNamespace>
+        <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
         <ServerGarbageCollection>true</ServerGarbageCollection>
     </PropertyGroup>
 
