Use $(Product) where possible in $(Description).

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -22,7 +22,7 @@
         <PackRelease>false</PackRelease>
         <PackageDescription>$(Description)
 
-Celerity is expression-oriented, multi-paradigm, and features optional type
+$(Product) is expression-oriented, multi-paradigm, and features optional type
 checking. Some notable features are pattern matching, first-class functions with
 closures, opt-in mutability, explicit yet terse error propagation, concurrency
 based on lightweight agents, and non-suspending garbage collection.</PackageDescription>
