Improve the JetBrains Fleet experience in the repo a bit.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "out": true,
     "**/*.received.*": true,
     "**/*.verified.*": true,
+    "**/.idea": true,
     "**/.vs": true,
     "**/node_modules": true
   }
