Use MSBuildTreatWarningsAsErrors to enable warnings-as-errors outside of Vezel.Celerity.Runtime.Native.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -18,6 +18,8 @@
         <LanguageStandard>gnu2x</LanguageStandard>
         <LangVersion>latest</LangVersion>
         <MicrosoftExtensions>true</MicrosoftExtensions>
+        <!-- TODO: Remove when -err is re-enabled in Directory.Build.rsp. -->
+        <MSBuildTreatWarningsAsErrors>true</MSBuildTreatWarningsAsErrors>
         <Nullable>enable</Nullable>
         <PackRelease>false</PackRelease>
         <PackageDescription>$(Description)
