--- a/src/tests/tests.csproj
+++ b/src/tests/tests.csproj
@@ -23,14 +23,12 @@
 
     <ItemGroup>
         <PackageReference Include="Meziantou.Xunit.ParallelTestFramework" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk"
-                          PrivateAssets="all" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" />
         <PackageReference Include="Shouldly" />
         <PackageReference Include="Verify.DiffPlex" />
         <PackageReference Include="Verify.Xunit" />
         <PackageReference Include="xunit" />
-        <PackageReference Include="xunit.runner.visualstudio"
-                          PrivateAssets="all" />
+        <PackageReference Include="xunit.runner.visualstudio" />
     </ItemGroup>
 
     <Import Project="../language/core/core.targets" />
