--- a/src/extensions/vscode/package.json
+++ b/src/extensions/vscode/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "celerity",
+  "name": "vscode-celerity",
   "displayName": "Celerity",
   "description": "Celerity programming language support for Visual Studio Code.",
   "publisher": "vezel",
