--- a/src/extensions/vscode/package.json
+++ b/src/extensions/vscode/package.json
@@ -54,7 +54,7 @@
     "Testing"
   ],
   "engines": {
-    "node": "20.5.0",
+    "node": "^20.0.0",
     "vscode": "^1.83.0"
   },
   "extensionKind": [
