Revert "Remove codezombiech.gitignore from recommended VS Code extensions."
This reverts commit 679b4be2001e5dda939fb7b68782290f2f9dc0f1.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,7 +1,7 @@
 <Project>
     <PropertyGroup>
         <Product>Celerity</Product>
-        <Description>$(Product) is an expressive programming language for writing concurrent and maintainable software.</Description>
+        <Description>Celerity is an expressive programming language for writing concurrent and maintainable software.</Description>
         <Company>Vezel</Company>
         <Authors>$(Company) Contributors</Authors>
         <Copyright>Copyright © $(Authors)</Copyright>
