Fix content path for Vezel.Celerity.Runtime.Native in Vezel.Celerity.Runtime project.

--- a/src/runtime/core/core.csproj
+++ b/src/runtime/core/core.csproj
@@ -31,7 +31,7 @@ bytecode lowerer, garbage collector, and agent scheduler.</PackageDescription>
 
         <ItemGroup>
             <Content Include="@(_NativeLibrary)"
-                     Link="%(RuntimeIdentifier)/%(Filename)%(Extension)"
+                     Link="runtimes/%(RuntimeIdentifier)/native/%(Filename)%(Extension)"
                      CopyToOutputDirectory="PreserveNewest"
                      PackagePath="runtimes/%(RuntimeIdentifier)/native" />
         </ItemGroup>
