--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,10 +2,12 @@
   "$schema": "https://json.schemastore.org/eslintrc.json",
   "extends": [
     "eslint:all",
+    "plugin:@stylistic/all-extends",
     "plugin:@typescript-eslint/all"
   ],
   "root": true,
   "plugins": [
+    "@stylistic",
     "@typescript-eslint"
   ],
   "parserOptions": {
@@ -13,6 +15,216 @@
     "project": true
   },
   "rules": {
+    "@stylistic/array-bracket-newline": "error",
+    "@stylistic/array-bracket-spacing": "error",
+    "@stylistic/array-element-newline": [
+      "error",
+      "consistent"
+    ],
+    "@stylistic/arrow-parens": [
+      "error",
+      "as-needed"
+    ],
+    "@stylistic/arrow-spacing": "error",
+    "@stylistic/block-spacing": "error",
+    "@stylistic/brace-style": "error",
+    "@stylistic/comma-dangle": [
+      "error",
+      {
+        "arrays": "always-multiline",
+        "enums": "always-multiline",
+        "exports": "always-multiline",
+        "imports": "always-multiline",
+        "objects": "always-multiline"
+      }
+    ],
+    "@stylistic/comma-spacing": "error",
+    "@stylistic/comma-style": "error",
+    "@stylistic/computed-property-spacing": "error",
+    "@stylistic/dot-location": [
+      "error",
+      "property"
+    ],
+    "@stylistic/eol-last": "error",
+    "@stylistic/function-call-argument-newline": [
+      "error",
+      "consistent"
+    ],
+    "@stylistic/function-call-spacing": "error",
+    "@stylistic/function-paren-newline": "off",
+    "@stylistic/generator-star-spacing": "error",
+    "@stylistic/implicit-arrow-linebreak": "off",
+    "@stylistic/indent": "off",
+    "@stylistic/jsx-quotes": "error",
+    "@stylistic/key-spacing": [
+      "error",
+      {
+        "beforeColon": true
+      }
+    ],
+    "@stylistic/keyword-spacing": "error",
+    "@stylistic/linebreak-style": "off",
+    "@stylistic/lines-between-class-members": [
+      "error",
+      "always",
+      {
+        "exceptAfterOverload": false
+      }
+    ],
+    "@stylistic/lines-around-comment": [
+      "error",
+      {
+        "allowArrayEnd": true,
+        "allowArrayStart": true,
+        "allowBlockEnd": true,
+        "allowBlockStart": true,
+        "allowClassEnd": true,
+        "allowClassStart": true,
+        "allowEnumEnd": true,
+        "allowEnumStart": true,
+        "allowInterfaceEnd": true,
+        "allowInterfaceStart": true,
+        "allowModuleEnd": true,
+        "allowModuleStart": true,
+        "allowObjectEnd": true,
+        "allowObjectStart": true,
+        "allowTypeEnd": true,
+        "allowTypeStart": true,
+        "applyDefaultIgnorePatterns": false,
+        "ignorePattern": "^\\s*(eslint .*|@ts-expect-error\\s*)$"
+      }
+    ],
+    "@stylistic/max-len": [
+      "error",
+      {
+        "code": 120,
+        "ignoreComments": false,
+        "ignoreRegExpLiterals": false,
+        "ignoreStrings": false,
+        "ignoreTemplateLiterals": false,
+        "ignoreUrls": false
+      }
+    ],
+    "@stylistic/max-statements-per-line": "error",
+    "@stylistic/multiline-ternary": [
+      "error",
+      "always-multiline"
+    ],
+    "@stylistic/new-parens": "error",
+    "@stylistic/newline-per-chained-call": "off",
+    "@stylistic/no-confusing-arrow": "off",
+    "@stylistic/no-extra-parens": [
+      "error",
+      "all",
+      {
+        "nestedBinaryExpressions": true
+      }
+    ],
+    "@stylistic/no-extra-semi": "error",
+    "@stylistic/no-floating-decimal": "error",
+    "@stylistic/no-mixed-operators": [
+      "error",
+      {
+        "groups": [
+          [
+            "&&",
+            "||"
+          ]
+        ]
+      }
+    ],
+    "@stylistic/no-mixed-spaces-and-tabs": "error",
+    "@stylistic/no-multi-spaces": [
+      "error",
+      {
+        "exceptions": {
+          "Property": false
+        }
+      }
+    ],
+    "@stylistic/no-multiple-empty-lines": [
+      "error",
+      {
+        "max": 1
+      }
+    ],
+    "@stylistic/no-tabs": "error",
+    "@stylistic/no-trailing-spaces": "error",
+    "@stylistic/no-whitespace-before-property": "error",
+    "@stylistic/nonblock-statement-body-position": [
+      "error",
+      "below"
+    ],
+    "@stylistic/object-curly-newline": [
+      "error",
+      {
+        "multiline": true
+      }
+    ],
+    "@stylistic/object-curly-spacing": [
+      "error",
+      "always",
+      {
+        "arraysInObjects": true,
+        "objectsInObjects": true
+      }
+    ],
+    "@stylistic/object-property-newline": [
+      "error",
+      {
+        "allowAllPropertiesOnSameLine": true
+      }
+    ],
+    "@stylistic/one-var-declaration-per-line": "error",
+    "@stylistic/operator-linebreak": "error",
+    "@stylistic/padded-blocks": "off",
+    "@stylistic/padding-line-between-statements": "off",
+    "@stylistic/quote-props": [
+      "error",
+      "as-needed"
+    ],
+    "@stylistic/quotes": [
+      "error",
+      "double",
+      {
+        "allowTemplateLiterals": true
+      }
+    ],
+    "@stylistic/rest-spread-spacing": [
+      "error",
+      "always"
+    ],
+    "@stylistic/semi": "error",
+    "@stylistic/semi-spacing": "error",
+    "@stylistic/semi-style": "error",
+    "@stylistic/space-before-blocks": "error",
+    "@stylistic/space-before-function-paren": "off",
+    "@stylistic/space-in-parens": "error",
+    "@stylistic/space-infix-ops": "error",
+    "@stylistic/space-unary-ops": "error",
+    "@stylistic/spaced-comment": "error",
+    "@stylistic/switch-colon-spacing": "error",
+    "@stylistic/template-curly-spacing": "error",
+    "@stylistic/template-tag-spacing": "error",
+    "@stylistic/type-annotation-spacing": [
+      "error",
+      {
+        "overrides": {
+          "colon": {
+            "before": true
+          }
+        }
+      }
+    ],
+    "@stylistic/wrap-iife": [
+      "error",
+      "inside"
+    ],
+    "@stylistic/wrap-regex": "error",
+    "@stylistic/yield-star-spacing": [
+      "error",
+      "before"
+    ],
     "@typescript-eslint/adjacent-overload-signatures": "error",
     "@typescript-eslint/array-type": [
       "error",
@@ -28,21 +240,8 @@
       }
     ],
     "@typescript-eslint/ban-types": "error",
-    "@typescript-eslint/block-spacing": "error",
-    "@typescript-eslint/brace-style": "error",
     "@typescript-eslint/class-literal-property-style": "error",
     "@typescript-eslint/class-methods-use-this": "error",
-    "@typescript-eslint/comma-dangle": [
-      "error",
-      {
-        "arrays": "always-multiline",
-        "enums": "always-multiline",
-        "exports": "always-multiline",
-        "imports": "always-multiline",
-        "objects": "always-multiline"
-      }
-    ],
-    "@typescript-eslint/comma-spacing": "error",
     "@typescript-eslint/consistent-generic-constructors": "error",
     "@typescript-eslint/consistent-indexed-object-style": "error",
     "@typescript-eslint/consistent-type-assertions": [
@@ -89,46 +288,7 @@
         "allowTypedFunctionExpressions": false
       }
     ],
-    "@typescript-eslint/func-call-spacing": "error",
-    "@typescript-eslint/indent": "off",
     "@typescript-eslint/init-declarations": "error",
-    "@typescript-eslint/key-spacing": [
-      "error",
-      {
-        "beforeColon": true
-      }
-    ],
-    "@typescript-eslint/keyword-spacing": "error",
-    "@typescript-eslint/lines-around-comment": [
-      "error",
-      {
-        "allowArrayEnd": true,
-        "allowArrayStart": true,
-        "allowBlockEnd": true,
-        "allowBlockStart": true,
-        "allowClassEnd": true,
-        "allowClassStart": true,
-        "allowEnumEnd": true,
-        "allowEnumStart": true,
-        "allowInterfaceEnd": true,
-        "allowInterfaceStart": true,
-        "allowModuleEnd": true,
-        "allowModuleStart": true,
-        "allowObjectEnd": true,
-        "allowObjectStart": true,
-        "allowTypeEnd": true,
-        "allowTypeStart": true,
-        "applyDefaultIgnorePatterns": false,
-        "ignorePattern": "^\\s*(eslint .*|@ts-expect-error\\s*)$"
-      }
-    ],
-    "@typescript-eslint/lines-between-class-members": [
-      "error",
-      "always",
-      {
-        "exceptAfterOverload": false
-      }
-    ],
     "@typescript-eslint/member-delimiter-style": "error",
     "@typescript-eslint/member-ordering": "error",
     "@typescript-eslint/method-signature-style": "error",
@@ -163,8 +323,6 @@
       }
     ],
     "@typescript-eslint/no-extra-non-null-assertion": "error",
-    "@typescript-eslint/no-extra-parens": "error",
-    "@typescript-eslint/no-extra-semi": "error",
     "@typescript-eslint/no-extraneous-class": [
       "error",
       {
@@ -275,15 +433,6 @@
     "@typescript-eslint/no-useless-template-literals": "error",
     "@typescript-eslint/no-var-requires": "error",
     "@typescript-eslint/non-nullable-type-assertion-style": "error",
-    "@typescript-eslint/object-curly-spacing": [
-      "error",
-      "always",
-      {
-        "arraysInObjects": true,
-        "objectsInObjects": true
-      }
-    ],
-    "@typescript-eslint/padding-line-between-statements": "off",
     "@typescript-eslint/parameter-properties": "error",
     "@typescript-eslint/prefer-as-const": "error",
     "@typescript-eslint/prefer-destructuring": [
@@ -319,19 +468,11 @@
         "allowAny": false
       }
     ],
-    "@typescript-eslint/quotes": [
-      "error",
-      "double",
-      {
-        "allowTemplateLiterals": true
-      }
-    ],
     "@typescript-eslint/require-array-sort-compare": "error",
     "@typescript-eslint/require-await": "error",
     "@typescript-eslint/restrict-plus-operands": "error",
     "@typescript-eslint/restrict-template-expressions": "off",
     "@typescript-eslint/return-await": "error",
-    "@typescript-eslint/semi": "error",
     "@typescript-eslint/sort-type-constituents": [
       "error",
       {
@@ -351,9 +492,6 @@
         ]
       }
     ],
-    "@typescript-eslint/space-before-blocks": "error",
-    "@typescript-eslint/space-before-function-paren": "off",
-    "@typescript-eslint/space-infix-ops": "error",
     "@typescript-eslint/strict-boolean-expressions": [
       "error",
       {
@@ -374,16 +512,6 @@
         "types": "never"
       }
     ],
-    "@typescript-eslint/type-annotation-spacing": [
-      "error",
-      {
-        "overrides": {
-          "colon": {
-            "before": true
-          }
-        }
-      }
-    ],
     "@typescript-eslint/typedef": [
       "error",
       {
@@ -400,29 +528,12 @@
     ],
     "@typescript-eslint/unified-signatures": "error",
     "accessor-pairs": "error",
-    "array-bracket-newline": "error",
-    "array-bracket-spacing": "error",
     "array-callback-return": "error",
-    "array-element-newline": [
-      "error",
-      "consistent"
-    ],
     "arrow-body-style": "error",
-    "arrow-parens": [
-      "error",
-      "as-needed"
-    ],
-    "arrow-spacing": "error",
     "block-scoped-var": "error",
-    "block-spacing": "off",
-    "brace-style": "off",
     "camelcase": "error",
     "capitalized-comments": "off",
-    "comma-dangle": "off",
-    "comma-spacing": "off",
-    "comma-style": "error",
     "complexity": "off",
-    "computed-property-spacing": "error",
     "consistent-return": "error",
     "consistent-this": "error",
     "constructor-super": "error",
@@ -430,15 +541,9 @@
     "default-case": "off",
     "default-case-last": "error",
     "default-param-last": "off",
-    "dot-location": [
-      "error",
-      "property"
-    ],
     "dot-notation": "off",
-    "eol-last": "error",
     "eqeqeq": "error",
     "for-direction": "error",
-    "func-call-spacing": "off",
     "func-name-matching": "off",
     "func-names": [
       "error",
@@ -448,12 +553,6 @@
       "error",
       "declaration"
     ],
-    "function-call-argument-newline": [
-      "error",
-      "consistent"
-    ],
-    "function-paren-newline": "off",
-    "generator-star-spacing": "error",
     "getter-return": "error",
     "grouped-accessor-pairs": [
       "error",
@@ -463,16 +562,8 @@
     "id-denylist": "off",
     "id-length": "off",
     "id-match": "off",
-    "implicit-arrow-linebreak": "off",
-    "indent": "off",
     "init-declarations": "off",
-    "jsx-quotes": "error",
-    "key-spacing": "off",
-    "keyword-spacing": "off",
     "line-comment-position": "off",
-    "linebreak-style": "off",
-    "lines-around-comment": "off",
-    "lines-between-class-members": "off",
     "logical-assignment-operators": [
       "error",
       "always",
@@ -482,23 +573,11 @@
     ],
     "max-classes-per-file": "off",
     "max-depth": "off",
-    "max-len": [
-      "error",
-      {
-        "code": 120,
-        "ignoreComments": false,
-        "ignoreRegExpLiterals": false,
-        "ignoreStrings": false,
-        "ignoreTemplateLiterals": false,
-        "ignoreUrls": false
-      }
-    ],
     "max-lines": "off",
     "max-lines-per-function": "off",
     "max-nested-callbacks": "off",
     "max-params": "off",
     "max-statements": "off",
-    "max-statements-per-line": "error",
     "multiline-comment-style": [
       "error",
       "separate-lines",
@@ -506,13 +585,7 @@
         "checkJSDoc": true
       }
     ],
-    "multiline-ternary": [
-      "error",
-      "always-multiline"
-    ],
     "new-cap": "error",
-    "new-parens": "error",
-    "newline-per-chained-call": "off",
     "no-alert": "off",
     "no-array-constructor": "off",
     "no-async-promise-executor": "error",
@@ -523,7 +596,6 @@
     "no-class-assign": "error",
     "no-compare-neg-zero": "error",
     "no-cond-assign": "off",
-    "no-confusing-arrow": "off",
     "no-console": "off",
     "no-const-assign": "error",
     "no-constant-binary-expression": "error",
@@ -567,16 +639,7 @@
       }
     ],
     "no-extra-label": "error",
-    "no-extra-parens": [
-      "error",
-      "all",
-      {
-        "nestedBinaryExpressions": true
-      }
-    ],
-    "no-extra-semi": "off",
     "no-fallthrough": "error",
-    "no-floating-decimal": "error",
     "no-func-assign": "error",
     "no-global-assign": "error",
     "no-implicit-coercion": [
@@ -610,34 +673,8 @@
     "no-loss-of-precision": "off",
     "no-magic-numbers": "off",
     "no-misleading-character-class": "error",
-    "no-mixed-operators": [
-      "error",
-      {
-        "groups": [
-          [
-            "&&",
-            "||"
-          ]
-        ]
-      }
-    ],
-    "no-mixed-spaces-and-tabs": "error",
     "no-multi-assign": "off",
-    "no-multi-spaces": [
-      "error",
-      {
-        "exceptions": {
-          "Property": false
-        }
-      }
-    ],
     "no-multi-str": "off",
-    "no-multiple-empty-lines": [
-      "error",
-      {
-        "max": 1
-      }
-    ],
     "no-negated-condition": "off",
     "no-nested-ternary": "off",
     "no-new": "off",
@@ -677,12 +714,10 @@
     "no-shadow": "off",
     "no-shadow-restricted-names": "error",
     "no-sparse-arrays": "error",
-    "no-tabs": "error",
     "no-template-curly-in-string": "error",
     "no-ternary": "off",
     "no-this-before-super": "error",
     "no-throw-literal": "off",
-    "no-trailing-spaces": "error",
     "no-undef": "off",
     "no-undef-init": "error",
     "no-undefined": "off",
@@ -722,35 +757,13 @@
     "no-var": "error",
     "no-void": "off",
     "no-warning-comments": "off",
-    "no-whitespace-before-property": "error",
     "no-with": "error",
-    "nonblock-statement-body-position": [
-      "error",
-      "below"
-    ],
-    "object-curly-newline": [
-      "error",
-      {
-        "multiline": true
-      }
-    ],
-    "object-curly-spacing": "off",
-    "object-property-newline": [
-      "error",
-      {
-        "allowAllPropertiesOnSameLine": true
-      }
-    ],
     "object-shorthand": "error",
     "one-var": [
       "error",
       "never"
     ],
-    "one-var-declaration-per-line": "error",
     "operator-assignment": "error",
-    "operator-linebreak": "error",
-    "padded-blocks": "off",
-    "padding-line-between-statements": "off",
     "prefer-arrow-callback": "error",
     "prefer-const": "error",
     "prefer-exponentiation-operator": "error",
@@ -769,23 +782,11 @@
     "prefer-spread": "error",
     "prefer-template": "error",
     "radix": "error",
-    "quote-props": [
-      "error",
-      "as-needed"
-    ],
-    "quotes": "off",
     "require-atomic-updates": "error",
     "require-await": "off",
     "require-unicode-regexp": "error",
     "require-yield": "error",
-    "rest-spread-spacing": [
-      "error",
-      "always"
-    ],
     "return-await": "off",
-    "semi": "off",
-    "semi-spacing": "error",
-    "semi-style": "error",
     "sort-imports": [
       "error",
       {
@@ -799,17 +800,8 @@
     ],
     "sort-keys": "off",
     "sort-vars": "off",
-    "space-before-blocks": "off",
-    "space-before-function-paren": "off",
-    "space-in-parens": "error",
-    "space-infix-ops": "off",
-    "space-unary-ops": "error",
-    "spaced-comment": "error",
     "strict": "error",
-    "switch-colon-spacing": "error",
     "symbol-description": "off",
-    "template-curly-spacing": "error",
-    "template-tag-spacing": "error",
     "unicode-bom": "error",
     "use-isnan": [
       "error",
@@ -819,15 +811,6 @@
     ],
     "valid-typeof": "error",
     "vars-on-top": "error",
-    "wrap-iife": [
-      "error",
-      "inside"
-    ],
-    "wrap-regex": "error",
-    "yield-star-spacing": [
-      "error",
-      "before"
-    ],
     "yoda": "error"
   },
   "ignorePatterns": [
