--- a/src/extensions/vscode/package.json
+++ b/src/extensions/vscode/package.json
@@ -216,6 +216,7 @@
     ]
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin": "1.5.3",
     "@types/node": "18.15.0",
     "@types/vscode": "1.83.0",
     "@typescript-eslint/eslint-plugin": "6.17.0",
