Set Node.js requirement to >= 18.0.0 since 20.0.0 is not common in distros yet.

--- a/src/extensions/vscode/package.json
+++ b/src/extensions/vscode/package.json
@@ -54,7 +54,7 @@
     "Testing"
   ],
   "engines": {
-    "node": "^20.0.0",
+    "node": ">=18.0.0",
     "vscode": "^1.83.0"
   },
   "extensionKind": [
