Synchronize tasks.vs.json from the .github repository.

--- a/tasks.vs.json
+++ b/tasks.vs.json
@@ -19,7 +19,7 @@
           "args": [
             "cake",
             "-t",
-            "pack"
+            "default-editor"
           ]
         }
       ]
