--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -54,8 +54,9 @@
     "@stylistic/function-paren-newline": "off",
     "@stylistic/generator-star-spacing": "error",
     "@stylistic/implicit-arrow-linebreak": "off",
+    // TODO: Configure the indent rules.
     "@stylistic/indent": "off",
-    "@stylistic/jsx-quotes": "error",
+    "@stylistic/indent-binary-ops": "off",
     "@stylistic/key-spacing": [
       "error",
       {
@@ -64,13 +65,6 @@
     ],
     "@stylistic/keyword-spacing": "error",
     "@stylistic/linebreak-style": "off",
-    "@stylistic/lines-between-class-members": [
-      "error",
-      "always",
-      {
-        "exceptAfterOverload": false
-      }
-    ],
     "@stylistic/lines-around-comment": [
       "error",
       {
@@ -94,6 +88,13 @@
         "ignorePattern": "^\\s*(eslint .*|@ts-expect-error\\s*)$"
       }
     ],
+    "@stylistic/lines-between-class-members": [
+      "error",
+      "always",
+      {
+        "exceptAfterOverload": false
+      }
+    ],
     "@stylistic/max-len": [
       "error",
       {
@@ -106,6 +107,7 @@
       }
     ],
     "@stylistic/max-statements-per-line": "error",
+    "@stylistic/member-delimiter-style": "error",
     "@stylistic/multiline-ternary": [
       "error",
       "always-multiline"
@@ -216,6 +218,8 @@
         }
       }
     ],
+    "@stylistic/type-generic-spacing": "error",
+    "@stylistic/type-named-tuple-spacing": "error",
     "@stylistic/wrap-iife": [
       "error",
       "inside"
