Update Vezel.Cathode to 0.12.42.

--- a/src/benchmarks/benchmarks.csproj
+++ b/src/benchmarks/benchmarks.csproj
@@ -32,7 +32,7 @@
     <ItemGroup>
         <PackageReference Include="BenchmarkDotNet" />
         <PackageReference Include="CommandLineParser" />
-        <PackageReference Include="Vezel.Cathode.Hosting" />
+        <PackageReference Include="Vezel.Cathode" />
     </ItemGroup>
 
     <Import Project="../language/core/core.targets" />
