--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -9,6 +9,8 @@
     </ItemGroup>
 
     <ItemGroup Condition="'$(UsingVezelZigSdk)' != 'true'">
+        <GlobalPackageReference Include="Microsoft.Build.CopyOnWrite"
+                                Version="1.0.302" />
         <GlobalPackageReference Include="Microsoft.CodeAnalysis.PublicApiAnalyzers"
                                 Version="3.3.4" />
         <GlobalPackageReference Include="Microsoft.VisualStudio.Threading.Analyzers"
