--- a/src/language/tooling/tooling.targets
+++ b/src/language/tooling/tooling.targets
@@ -1,6 +1,7 @@
 <Project>
     <ItemGroup Condition="'$(ImplicitUsings)' == 'true' or '$(ImplicitUsings)' == 'enable'">
         <Using Include="Vezel.Celerity.Language.Tooling" />
+        <Using Include="Vezel.Celerity.Language.Tooling.Classification" />
         <Using Include="Vezel.Celerity.Language.Tooling.Diagnostics" />
         <Using Include="Vezel.Celerity.Language.Tooling.Projects" />
         <Using Include="Vezel.Celerity.Language.Tooling.Workspaces" />
