Shorten package descriptions.

--- a/src/common/common.csproj
+++ b/src/common/common.csproj
@@ -2,7 +2,7 @@
     <PropertyGroup>
         <AssemblyName>Vezel.Celerity.Common</AssemblyName>
         <IsPackable>true</IsPackable>
-        <PackageDescription>$(PackageDescription)
+        <PackageDescription>$(Description)
 
 This package provides common functionality used by all Celerity packages.</PackageDescription>
         <PackageId>Vezel.Celerity.Common</PackageId>
