--- a/src/runtime/interpreter/interpreter.csproj
+++ b/src/runtime/interpreter/interpreter.csproj
@@ -2,7 +2,7 @@
     <PropertyGroup>
         <AssemblyName>Vezel.Celerity.Runtime.Interpreter</AssemblyName>
         <IsPackable>true</IsPackable>
-        <PackageDescription>$(PackageDescription)
+        <PackageDescription>$(Description)
 
 This package provides the portable bytecode interpreter which does not require
 dynamic code generation.</PackageDescription>
