--- a/src/language/service/service.csproj
+++ b/src/language/service/service.csproj
@@ -2,7 +2,7 @@
     <PropertyGroup>
         <AssemblyName>Vezel.Celerity.Language.Service</AssemblyName>
         <IsPackable>true</IsPackable>
-        <PackageDescription>$(PackageDescription)
+        <PackageDescription>$(Description)
 
 This package provides the Language Server Protocol implementation.</PackageDescription>
         <PackageId>Vezel.Celerity.Language.Service</PackageId>
