--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,9 @@ on:
     types:
       - published
 permissions:
+  attestations: write
   contents: read
+  id-token: write
 defaults:
   run:
     shell: bash
@@ -36,6 +38,14 @@ jobs:
         run: |
           ./cake upload-core-nuget -c Release
           ./cake upload-vscode -c Release
+      - name: Attest packages
+        uses: actions/attest-build-provenance@v1.0.0
+        with:
+          subject-path: out/pkg/dotnet/release/*.nupkg
+      - name: Attest extensions
+        uses: actions/attest-build-provenance@v1.0.0
+        with:
+          subject-path: out/pkg/vs*/*.vsix
       - name: Upload artifacts
         if: always()
         uses: actions/upload-artifact@v4.3.3
